# verdandi

./: .gitignore  FABRIC_ORCHESTRATION.md  README.md  pyproject.toml  test_link.py
docs/: GUI_CANVAS_NOTES.md
packaging/: install-service.sh  verdandi-daemon.service
verdandi_codex/: __init__.py  config.py  crypto.py  database.py  db_init.py
verdandi_codex/models/: __init__.py  audit.py  fabric.py  identity.py  jacktrip.py  tasks.py  voice.py
verdandi_codex/proto/: .gitkeep  verdandi.proto  verdandi_pb2.py  verdandi_pb2_grpc.py
verdandi_engine/: __init__.py  daemon.py  discovery.py  fabric_manager.py  fabric_orchestrator.py  grpc_server.py  jack_connection_manager.py  jack_service.py  jacktrip_manager.py  jacktrip_service.py  node_registry.py  rtpmidi_manager.py  services.py
verdandi_hall/: __init__.py  grpc_client.py  main.py
verdandi_hall/widgets/: __init__.py  fabric_canvas.py  fabric_canvas_v2.py  jack_canvas.py  jack_client_manager.py
verdandi_rune/: __init__.py  cli.py
